--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <link rel="stylesheet" href="assets/style.css">
+    <title>Chucknorris Jokes</title>
 </head>
 <body>
-    
+    <div id="root" class="container">
+        <nav id="categories" class="categories-menu">
+            
+        </nav>
+    </div>
 </body>
 <script src="api.js"></script>
 </html>
