--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,9 @@
         <nav id="categories" class="categories-menu">
             
         </nav>
+        <div id="card" class="card">
+            
+        </div>
     </div>
 </body>
 <script src="api.js"></script>
