Gets menus when the body loads

--- a/src/index.html
+++ b/src/index.html
@@ -7,13 +7,14 @@
     <link rel="stylesheet" href="assets/style.css">
     <title>Chucknorris Jokes</title>
 </head>
-<body>
+<body onload="getMenus()">
     <div id="root" class="container">
         <nav id="categories" class="categories-menu">
             
         </nav>
         <div id="card" class="card">
-            
+            <img id="avatar" src="" alt="">
+            <p id="joke"></p>
         </div>
     </div>
 </body>
