create card component style

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,15 +8,22 @@
     <link rel="stylesheet" href="assets/style.css">
     <title>Chucknorris Jokes</title>
 </head>
+
 <body>
     <div id="root" class="container">
         <nav id="categories" class="categories-menu">
-            
+
         </nav>
         <div id="card" class="card">
-            
+            <img src="https://assets.chucknorris.host/img/avatar/chuck-norris.png" alt="">
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore libero voluptate magnam vel esse aliquid
+                commodi at, accusamus sapiente doloremque maxime incidunt tempora totam ratione eum iste quis quos
+                harum.
+            </p>
         </div>
     </div>
 </body>
 <script src="api.js"></script>
+
 </html>
