--- a/src/index.html
+++ b/src/index.html
@@ -7,10 +7,24 @@
     <link rel="stylesheet" href="assets/style.css">
     <title>Chucknorris Jokes</title>
 </head>
-<body onload="getMenus()">
+<body>
     <div id="root" class="container">
         <nav id="categories" class="categories-menu">
-            
+          <li onclick="getJoke('animal')">Animal</li>
+          <li onclick="getJoke('career')">Career</li>
+          <li onclick="getJoke('celebrity')">Celebrity</li>
+          <li onclick="getJoke('dev')">Dev</li>
+          <li onclick="getJoke('explicit')">Explicit</li>
+          <li onclick="getJoke('fashion')">Fashion</li>
+          <li onclick="getJoke('food')">Food</li>
+          <li onclick="getJoke('history')">History</li>
+          <li onclick="getJoke('money')">Money</li>
+          <li onclick="getJoke('music')">Music</li>
+          <li onclick="getJoke('political')">Political</li>
+          <li onclick="getJoke('religion')">Religion</li>
+          <li onclick="getJoke('science')">Science</li>
+          <li onclick="getJoke('sport')">Sport</li>
+          <li onclick="getJoke('travel')">Travel</li>
         </nav>
         <div id="card" class="card">
             <img id="avatar" src="" alt="">
