--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://fonts.googleapis.com/css?family=Bangers|Sigmar+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/style.css">
     <title>Chucknorris Jokes</title>
 </head>
@@ -33,7 +34,7 @@
             <p id="joke"></p>
         </div>
     </div>
-</body>
+</bod>
 <script src="api.js"></script>
 
 </html>
