Adds a default joke

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
     <title>Chucknorris Jokes</title>
 </head>
 
-<body>
+<body onload="getJoke('dev');">
   <nav id="categories" class="categories-menu">
     <li onclick="getJoke('animal')">Animal</li>
     <li onclick="getJoke('career')">Career</li>
