--- a/src/index.html
+++ b/src/index.html
@@ -31,13 +31,12 @@
   </nav>
   <div id="root" class="container">
   <div class="">
-          <div id="card" class="card">
-            <img id="avatar" src="" alt="">
-            <p id="joke"></p>
-          </div>
-        </div>
+    <div id="card" class="card">
+      <img id="avatar" src="" alt="">
+      <p id="joke"></p>
     </div>
-</bod>
+  </div>
+</body>
 <script src="api.js"></script>
 
 </html>
